{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 24,
  "lineage": "de4c46fb-9ce6-e20c-c3c2-081ce4a694ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "minecraft_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb93582bd196b88b",
            "arn": "arn:aws:ec2:us-west-2:590183830156:elastic-ip/eipalloc-0fb93582bd196b88b",
            "association_id": "eipassoc-0d07a6bac3228152b",
            "domain": "vpc",
            "id": "eipalloc-0fb93582bd196b88b",
            "instance": "i-0df711692b8be1c30",
            "network_border_group": "us-west-2",
            "network_interface": "eni-06c2387028d966418",
            "private_dns": "ip-10-0-1-142.us-west-2.compute.internal",
            "private_ip": "10.0.1.142",
            "public_dns": "ec2-52-33-103-49.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.103.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Minecraft-EIP"
            },
            "tags_all": {
              "Name": "Minecraft-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.minecraft_server",
            "aws_security_group.minecraft_sg",
            "aws_subnet.minecraft_subnet",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minecraft_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d2ed97ce7162747",
            "arn": "arn:aws:ec2:us-west-2:590183830156:instance/i-0df711692b8be1c30",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0df711692b8be1c30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c2387028d966418",
            "private_dns": "ip-10-0-1-142.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.142",
            "public_dns": "ec2-35-92-162-51.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.162.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b5fc2dd8dd24fc90",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c79438826451e808",
            "tags": {
              "Name": "Minecraft-Server"
            },
            "tags_all": {
              "Name": "Minecraft-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e0f40cb9c0619c6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.minecraft_sg",
            "aws_subnet.minecraft_subnet",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "minecraft_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183830156:internet-gateway/igw-0d0598f26379c59ea",
            "id": "igw-0d0598f26379c59ea",
            "owner_id": "590183830156",
            "tags": {
              "Name": "Minecraft-IGW"
            },
            "tags_all": {
              "Name": "Minecraft-IGW"
            },
            "vpc_id": "vpc-06706a4344515d6e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "minecraft_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183830156:route-table/rtb-02933ed406b3b5d11",
            "id": "rtb-02933ed406b3b5d11",
            "owner_id": "590183830156",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0598f26379c59ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Minecraft-RouteTable"
            },
            "tags_all": {
              "Name": "Minecraft-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06706a4344515d6e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.minecraft_igw",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "minecraft_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a869bb7120a41e6",
            "route_table_id": "rtb-02933ed406b3b5d11",
            "subnet_id": "subnet-0c79438826451e808"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.minecraft_igw",
            "aws_route_table.minecraft_rt",
            "aws_subnet.minecraft_subnet",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "minecraft_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183830156:security-group/sg-04e0f40cb9c0619c6",
            "description": "Allow Minecraft and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e0f40cb9c0619c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              },
              {
                "cidr_blocks": [
                  "18.237.140.160/29"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "minecraft-security-group",
            "name_prefix": "",
            "owner_id": "590183830156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Minecraft-SecurityGroup"
            },
            "tags_all": {
              "Name": "Minecraft-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-06706a4344515d6e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "minecraft_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183830156:subnet/subnet-0c79438826451e808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c79438826451e808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183830156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Minecraft-Subnet"
            },
            "tags_all": {
              "Name": "Minecraft-Subnet"
            },
            "vpc_id": "vpc-06706a4344515d6e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "minecraft_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590183830156:vpc/vpc-06706a4344515d6e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4077f7b7a28a2a8",
            "default_route_table_id": "rtb-08df91aee16ab38f0",
            "default_security_group_id": "sg-00c92c734001642c5",
            "dhcp_options_id": "dopt-0fb03b7d84c28964d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06706a4344515d6e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08df91aee16ab38f0",
            "owner_id": "590183830156",
            "tags": {
              "Name": "Minecraft-VPC"
            },
            "tags_all": {
              "Name": "Minecraft-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}